fix dashboard icon alignment

--- a/www/less/main/pages/dashboard.less
+++ b/www/less/main/pages/dashboard.less
@@ -111,6 +111,9 @@
 							width: auto;
 						}
 						.icon {
+							display: inline-block;
+							width: 30px;
+							text-align: right;
 							font-size: 20px;
 							margin-right: 3px;
 						}
